kubernetes/jenkins/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
  labels:
    app.kubernetes.io/component: jenkins-master
    app.kubernetes.io/name: jenkins
  name: gcp-jenkins-jenkins-ui
spec:
  rules:
    - host: jenkins.slsops.coe.athenka.com
      http:
        paths:
        - backend:
            service:
              name: gcp-jenkins-jenkins-ui
              port:
                number: 8080
          pathType: ImplementationSpecific
  tls:
  - hosts:
    - jenkins.slsops.athenka.com
    secretName: jenkins.slsops.athenka.com-tls
